k3s-lab/sample-apps/fun-game-demo/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fun-game-demo
  namespace: sample-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fun-game-demo
  template:
    metadata:
      labels:
        app: fun-game-demo
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: fun-game-demo
      containers:
        - name: fun-game-demo
          image: rancher-mes.firstsolar.com/fun-game-demo:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fun-game-demo
  namespace: sample-apps
spec:
  type: NodePort
  selector:
    app: fun-game-demo
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30092
